<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature_label">Temperature</string>
    <string name="feels_like_label">Feels like</string>
    <string name="coordinates_label_text">coordinates:</string>
    <string name="error_text">Can\'t load data:</string>
    <string name="retry_text">Try again:</string>
    <string name="success_text">Success:</string>
    <string name="redirection_text">Redirection! </string>
    <string name="client_error_text">Client Error! </string>
    <string name="server_error_text">Server Error! </string>
    <string name="infomational_text">Informational! </string>
    <string name="error_history_load_text">Can\'t load history Database:</string>

    <string name="error_load_text">Error by loading data for</string>
    <string name="min_text">MIN</string>
    <string name="max_text">MAX</string>
    <string name="wind_label">Wind</string>
    <string name="direction_label_text">direction</string>
    <string name="speed_label_text">speed</string>

    <string name="head_picture1">https://freepngimg.com/thumb/city/36275-3-city-hd.png</string>
    <string name="head_picture2">https://cdn.pixabay.com/photo/2016/05/03/09/40/thunder-1368797_960_720.jpg</string>
    <string name="head_picture3">https://cdn.pixabay.com/photo/2017/12/01/15/44/merligen-2991122_960_720.jpg</string>
    <string name="head_picture4">https://cdn.pixabay.com/photo/2016/09/10/23/08/lisbon-1660337_960_720.jpg</string>
    <string name="head_picture5">https://cdn.pixabay.com/photo/2016/08/23/17/49/weather-1615103_960_720.jpg</string>

    <string name="dialog_button_close">Close</string>
    <string name="dialog_title_no_gps">Permission for geolocation is closed</string>
    <string name="dialog_message_no_gps">Give permission for geolocation to find out the weather of the current location</string>
    <string name="dialog_title_gps_turned_off">GPS is off</string>
    <string name="dialog_message_last_location_unknown">The location is unknown. Turn on GPS!</string>
    <string name="dialog_message_last_known_location">The last known location is shown. Turn on GPS if you want to update your location</string>
    <string name="dialog_rationale_title">Access to geolocation</string>
    <string name="dialog_rationale_message">Explanation</string>
    <string name="dialog_rationale_give_access">Give access</string>
    <string name="dialog_rationale_decline">No need</string>
    <string name="dialog_address_title">Your address</string>
    <string name="dialog_address_get_weather">Get weather</string>
    <string name="dialog_address_get_weather_for_place">Do you want to get weather for this place?</string>
    <string name="dialog_address_get_it">Get it</string>


</resources>